--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "seed:questionnaires": "ts-node -r tsconfig-paths/register src/scripts/seed-questionnaires.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.936.0",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
